# netology

./: pyproject.toml
EighthHomework/: homework_first.ipynb
FifthHomework/: homework_first.ipynb
FirstHomework/: homework.ipynb
FourthHomework/: homework_first.ipynb
NinethHomework/: homework_first.ipynb
SecondHomework/: homework_second.ipynb
SeventhHomework/: homework_first.ipynb
SixthHomework/: homework_first.ipynb
ThirdHomework/: homework_first.ipynb
