[tool.poetry]
name = "netology"
version = "0.1.0"
description = ""
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
statsmodels = "^0.14.1"
category-encoders = "^2.6.3"
optuna = "^3.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
